#134: block create white-space button

--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -9,4 +9,6 @@ html.debug {
 		.block.blockLayout.c0  > .wrapContent > .dropTarget { background: rgba(0,0,255,0.1); }
 		.block.blockLayout.c1 { border-color: rgba(0,0,255,0.3); }
 	}
+	
+	.lastBlock { background: rgba(0,0,255,0.1); }
 } 
