--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -10,5 +10,5 @@ html.debug {
 		.block.blockLayout.c1 { border-color: rgba(0,0,255,0.3); }
 	}
 	
-	.lastBlock { background: rgba(0,0,255,0.1); }
+	.blockLast { background: rgba(0,0,255,0.1); }
 } 
