--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -52,6 +52,7 @@ a { color: $colorBlack; }
 .dropTarget.targetTop.isOver.top { box-shadow: 0px -2px 0px $colorOrange inset; }
 .dropTarget.targetBot.isOver.bottom { box-shadow: 0px 2px 0px $colorOrange inset; }
 
+.textColor-black { color: $colorBlack !important; }
 .textColor-grey { color: #aca996 !important; }
 .textColor-yellow { color: #ecd91b !important; }
 .textColor-orange { color: #ffb522 !important; }
