--- a/src/scss/component/linkPreview.scss
+++ b/src/scss/component/linkPreview.scss
@@ -1,9 +1,10 @@
 @import "~scss/_vars";
 
 .linkPreview {
-	position: absolute; left: 0px; top: 0px; width: 320px; height: 264px; z-index: 100; display: none; opacity: 0; 
+	position: absolute; left: 0px; top: 0px; width: 320px; height: 152px; z-index: 100; display: none; opacity: 0; 
 	transition: opacity 0.2s ease-in-out;
 }
+.linkPreview.withImage { height: 264px; }
 
 .linkPreview {
 	.content { background: #fff; box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.35); border-radius: 8px; position: relative; height: 100%; }
