link preview fixes

--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -7,7 +7,7 @@
 		.value { -webkit-user-modify: read-write-plaintext-only; }
 		.placeHolder { color: #aca996; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; overflow: hidden; width: 100%; height: 100%; }
 		
-		a { cursor: pointer; white-space: nowrap; }
+		a { cursor: pointer; }
 		kbd { display: inline; font-family: 'Mono'; line-height: 1.71; background: rgba(247,245,240,0.5); padding: 0px 4px; border-radius: 2px; }
 		
 		.markers { white-space: nowrap; }
