--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,11 +1,14 @@
-$colorGrey: #e0ded2;
+$colorLightGrey: #dfddd0;
+$colorDarkGrey: #aca996;
 $colorBlack: #2c2b27;
-$colorBrown: #aca996;
+$colorYellow: #ecd91b;
 $colorOrange: #ffb522;
-$colorRed: #f86240;
-$colorPurple: #c781de;
-$colorBlue: #4fb1ef;
-$colorTeal: #4dc9b3;
-$colorGreen: #6fbd63;
+$colorRed: #f55522;
+$colorPink: #e51ca0;
+$colorPurple: #ab50cc;
+$colorBlue: #3e58eb;
+$colorIce: #2aa7ee;
+$colorTeal: #0fc8ba;
+$colorLime: #5dd400;
 
 $transitionFast: all 0.2s ease-in-out;
