--- a/src/scss/component/linkPreview.scss
+++ b/src/scss/component/linkPreview.scss
@@ -23,7 +23,7 @@
 	.icon.fav { width: 16px; height: 16px; margin: -4px 4px 0px 0px; }
 	
 	.head { 
-		padding: 8px 16px; letter-spacing: -0.08px; color: #aca996; font-weight: 500; position: absolute; left: 0px; width: 100%;
+		padding: 8px 16px; letter-spacing: -0.08px; color: $colorDarkGrey; font-weight: 500; position: absolute; left: 0px; width: 100%;
 		height: 40px; 
 	}
 	.head {
