--- a/src/scss/component/switch.scss
+++ b/src/scss/component/switch.scss
@@ -11,7 +11,7 @@
 	}	
 }
 .switch.active { background: #6c6a5f; }
-.switch.green.active { background: $colorGreen; }
+.switch.green.active { background: $colorLime; }
 
 .switch.active {
 	.inner { left: auto; right: 2px; }
