--- a/src/scss/component/tag.scss
+++ b/src/scss/component/tag.scss
@@ -11,7 +11,7 @@
 .tag.red { color: #e2400c; background: #ffe5de; }
 .tag.pink { color: #ca1b8e; background: #fddcf2; }
 .tag.purple { color: #9e30c4; background: #f1dbf8; }
-.tag.blue { color: #3e58eb; background: #dce1fb; }
+.tag.blue { color: $colorBlue; background: #dce1fb; }
 .tag.ice { color: #1c8bca; background: #cfedfe; }
 .tag.teal { color: #0caaa3; background: #d4f5f3; }
 .tag.lime { color: #64b90f; background: #e3f7d0; }
