--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -10,6 +10,6 @@
 			.select { margin-right: 8px; }
 			.select:last-child { margin: 0px; }
 		}
-		.item.add { color: #aca996; }
+		.item.add { color: $colorDarkGrey; }
 	}
 }
