--- a/src/scss/menu/dataview/property.scss
+++ b/src/scss/menu/dataview/property.scss
@@ -9,14 +9,14 @@
 			.switch { position: absolute; right: 16px; top: 50%; margin-top: -8px; }
 			.name { width: calc(100% - 73px); }
 		}
-		.item.add { color: #aca996; }
+		.item.add { color: $colorDarkGrey; }
 	}
 	
 	.menu.menuDataviewPropertyEdit { width: 208px; }
 	.menu.menuDataviewPropertyEdit {
 		.wrap { padding: 8px 16px; }
-		.line { height: 1px; margin: 8px 0px; background: #dfddd0; }
-		.input { border: 1px solid #dfddd0; font-size: 13px; padding: 0px 8px; }
+		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
+		.input { border: 1px solid $colorLightGrey; font-size: 13px; padding: 0px 8px; }
 		
 		.icon.arrow { 
 			width: 6px; height: 10px; position: absolute; right: 16px; top: 50%; margin: -5px 0px 0px 0px; 
