--- a/src/scss/menu/dataview/tag.scss
+++ b/src/scss/menu/dataview/tag.scss
@@ -4,7 +4,7 @@
 	.menu.menuDataviewTagList { width: 228px; }
 	.menu.menuDataviewTagList {
 		.form { padding: 0px 10px; }
-		.line { height: 1px; margin: 8px 0px; background: #dfddd0; }
+		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
 		.input { padding: 0px; font-size: 13px; height: 18px; }
 		.item { padding: 5px 10px; }
 	}
@@ -12,6 +12,6 @@
 	.menu.menuDataviewTagEdit { width: 208px; }
 	.menu.menuDataviewTagEdit {
 		.wrap { padding: 8px 16px; }
-		.input { border: 1px solid #dfddd0; font-size: 13px; padding: 0px 8px; }
+		.input { border: 1px solid $colorLightGrey; font-size: 13px; padding: 0px 8px; }
 	}	
 }
