--- a/src/scss/menu/smile.scss
+++ b/src/scss/menu/smile.scss
@@ -4,7 +4,7 @@
 	.menu.menuSmile { width: 408px; user-select: none; }
 	.menu.menuSmile {
 		.content { overflow: visible; max-height: 488px; }
-		.head { color: #aca996; font-weight: 500; padding: 4px 16px; border-bottom: 1px solid #eae9e0; }
+		.head { color: $colorDarkGrey; font-weight: 500; padding: 4px 16px; border-bottom: 1px solid #eae9e0; }
 		.head {
 			.btn { display: inline-block; vertical-align: middle; margin-right: 16px; transition: $transitionFast; cursor: pointer; }
 			.btn:last-child { margin-right: 0px; }
@@ -20,7 +20,7 @@
 		.empty { height: 100%; line-height: 360px; padding: 16px; text-align: center; }
 		.empty {
 			b { display: block; font-weight: 400; color: $colorBlack; }
-			.txt { line-height: 24px; color: #aca996; }
+			.txt { line-height: 24px; color: $colorDarkGrey; }
 		}
 		
 		.section { padding-top: 0px; padding-bottom: 4px; border: 0px; }
