--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -12,11 +12,10 @@
 	}
 	
 	.cover { position: absolute; background-image: url('~img/cover/4.jpg'); background-size: 100% auto; background-position: 50% 50%; }
-	.elements { 
-		width: 704px; height: calc(100% - 40px); position: absolute; left: 50%; margin-left: -352px; bottom: 0px; z-index: 1; 
-		opacity: 0; transition: opacity 0.2s ease-in-out; 
+	.elements { width: 704px; height: calc(100% - 40px); position: absolute; left: 50%; margin-left: -352px; bottom: 0px; z-index: 1; }
+	.elements:hover { 
+		.btn { opacity: 1 !important; }
 	}
-	.elements:hover { opacity: 1; }
 	
 	.elements {
 		.buttons { position: absolute; right: 0px; bottom: 8px; }
@@ -31,16 +30,17 @@
 		}
 	
 		.btn { 
-			font-weight: 500; font-size: 13px; height: 24px; line-height: 24px; cursor: pointer; display: inline-block;
+			font-weight: 500; font-size: 13px; height: 24px; line-height: 24px; cursor: pointer; display: inline-block; opacity: 0;
 			padding: 0px 8px; border-radius: 4px; margin-right: 8px; white-space: nowrap; transition: background 0.2s ease-in-out; text-align: center;
 		}
+		.btn.active { opacity: 1; }
 		.btn:last-child { margin: 0px; }
 		
 		.btn.white { background: rgba(255,255,255,0.7); }
-		.btn.white:hover { background: rgba(255,255,255,0.9); }
+		.btn.white:hover, .btn.white.active { background: rgba(255,255,255,0.9); }
 		
 		.btn.black { color: #fff; background: rgba(0,0,0,0.5); }
-		.btn.black:hover { background: rgba(0,0,0,0.7); }
+		.btn.black:hover, .btn.black.active { background: rgba(0,0,0,0.7); }
 		
 		.btn {
 			.icon { width: 16px; height: 16px; margin: -2px 6px 0px 0px; }
