--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -10,7 +10,7 @@
 		.icon.checkBox { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/bool0.svg'); }
 		.icon.checkBox.active { background-image: url('~img/icon/block/dataview/bool1.svg'); }
 		
-		.views { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; color: #aca996; font-weight: bold; margin-bottom: 16px; }
+		.views { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; color: $colorDarkGrey; font-weight: bold; margin-bottom: 16px; }
 		.views {
 			.item { margin-right: 20px; display: inline-block; vertical-align: middle; transition: $transitionFast; cursor: pointer; }
 			.item:last-child { margin: 0px; }
@@ -19,7 +19,7 @@
 			.icon.plus { margin-top: -4px; }
 		}
 		
-		.buttons { display: flex; margin-bottom: 8px; font-weight: 500; color: #aca996; }
+		.buttons { display: flex; margin-bottom: 8px; font-weight: 500; color: $colorDarkGrey; }
 		.buttons {
 			.side { width: 50%; }
 			.side.right { text-align: right; }
@@ -58,7 +58,7 @@
 		.content {
 			.view { border-top: 1px solid #e0ded2; }
 			
-			.card { min-height: 112px; border: 1px solid #dfddd0; border-radius: 12px; padding: 16px; }
+			.card { min-height: 112px; border: 1px solid $colorLightGrey; border-radius: 12px; padding: 16px; }
 			
 			.cell { font-size: 13px; line-height: 18px; letter-spacing: -0.08px; }
 			
@@ -87,7 +87,7 @@
 			.view.viewGrid { border-collapse: collapse; min-width: 100%; border-bottom: 1px solid #e0ded2; }
 			.view.viewGrid {
 				.head { 
-					text-align: left; font-size: 13px; line-height: 18px; letter-spacing: 0.08px; color: #aca996; font-weight: 500;
+					text-align: left; font-size: 13px; line-height: 18px; letter-spacing: 0.08px; color: $colorDarkGrey; font-weight: 500;
 					padding: 7px 8px; border-bottom: 1px solid #e0ded2; border-right: 1px solid #e0ded2; white-space: nowrap;
 				}
 				.head:last-child { border-right: 0px; }
@@ -110,7 +110,7 @@
 				.cell.c3 { color: #6c6a5f; }
 			
 				.card { 
-					width: 260px; border: 1px solid #dfddd0; border-radius: 12px; padding: 16px; 
+					width: 260px; border: 1px solid $colorLightGrey; border-radius: 12px; padding: 16px; 
 					margin: 0px 16px 16px 0px; display: inline-block; vertical-align: top;
 				}
 			}
