--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -11,7 +11,7 @@
 			vertical-align: top; padding-top: 1px; cursor: pointer;
 		}
 		.size {
-			max-width: 100px; font-size: 13px; height: 22px; line-height: 22px; letter-spacing: 0.1px; color: #aca996; margin: 0px 8px;
+			max-width: 100px; font-size: 13px; height: 22px; line-height: 22px; letter-spacing: 0.1px; color: $colorDarkGrey; margin: 0px 8px;
 			display: inline-block; vertical-align: top; padding-top: 1px;
 		}
 		.download {
