--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -45,7 +45,7 @@
 
 .icon.user { 
 	width: 64px; height: 64px; border-radius: 100%; font-weight: 500; position: relative; overflow: hidden;
-	text-transform: uppercase; font-size: 22px; color: #fff; text-align: center; line-height: 62px; background-color: #2aa7ee;
+	text-transform: uppercase; font-size: 22px; color: #fff; text-align: center; line-height: 62px; background-color: $colorIce;
 }
 .icon.user.c18 { width: 18px; height: 18px; line-height: 18px; font-size: 11px; }
 .icon.user.c40 { width: 40px; height: 40px; line-height: 40px; font-size: 18px; }
@@ -57,12 +57,12 @@
 		border-radius: 100%; 
 	}
 }
-.icon.user.grey { background-color: $colorGrey; }
+.icon.user.grey { background-color: $colorLightGrey; }
 .icon.user.black { background-color: $colorBlack; }
-.icon.user.brown { background-color: $colorBrown; }
+.icon.user.brown { background-color: $colorDarkGrey; }
 .icon.user.orange { background-color: $colorOrange; }
 .icon.user.red { background-color: $colorRed; }
 .icon.user.purple { background-color: $colorPurple; }
 .icon.user.blue { background-color: $colorBlue; }
 .icon.user.teal { background-color: $colorTeal; }
-.icon.user.green { background-color: $colorGreen; }
+.icon.user.green { background-color: $colorLime; }
