--- a/src/scss/menu/dataview/account.scss
+++ b/src/scss/menu/dataview/account.scss
@@ -4,7 +4,7 @@
 	.menu.menuDataviewAccount { width: 228px; }
 	.menu.menuDataviewAccount {
 		.form { padding: 0px 10px; }
-		.line { height: 1px; margin: 8px 0px; background: #dfddd0; }
+		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
 		.input { padding: 0px; font-size: 13px; height: 18px; }
 		.item { padding: 5px 10px; }
 	}	
