--- a/src/scss/popup/archive.scss
+++ b/src/scss/popup/archive.scss
@@ -18,7 +18,7 @@
 			.name { display: inline-block; vertical-align: middle; width: calc(100% - 28px); }
 			.buttons { position: absolute; right: 10px; top: 4px; opacity: 0; transition: $transitionFast; }
 			.buttons {
-				.btn { display: inline-block; vertical-align: middle; margin-right: 20px; color: #aca996; cursor: pointer; }
+				.btn { display: inline-block; vertical-align: middle; margin-right: 20px; color: $colorDarkGrey; cursor: pointer; }
 				.btn:last-child { margin: 0px; }
 				.btn:hover { color: $colorBlack; }
 			}
