--- a/src/scss/component/tag.scss
+++ b/src/scss/component/tag.scss
@@ -1,3 +1,5 @@
+@import "~scss/_vars";
+
 .tag {
 	padding: 0px 4px; font-size: 13px; line-height: 18px; letter-spacing: 0.08px; border-radius: 3px; white-space: nowrap;
 	display: inline-block; vertical-align: middle; cursor: pointer; max-width: 100%;
