--- a/src/scss/component/progress.scss
+++ b/src/scss/component/progress.scss
@@ -2,6 +2,12 @@
 	position: fixed; left: 0px; top: 0px; z-index: 110; width: 100%; height: 100%; background: rgba(0,0,0,0.1);
 	transition: background 0.05s ease-in-out; 
 }
+
+.progress.isUnlocked { background: none; height: auto; }
+.progress.isUnlocked {
+	.inner { left: auto; right: 24px; top: 40px; margin: 0px; }
+}
+
 .progress {
 	.inner { 
 		position: absolute; left: 50%; top: 50%; box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.3); height: 40px; line-height: 40px;
@@ -12,6 +18,8 @@
 		.label { position: absolute; left: 0px; top: 0px; width: 100%; z-index: 1; color: #fff; }
 		.bar { background: #6a6962; height: 100%; position: absolute; left: 0px; top: 0px; }
 	}
+	
+	.btn { display: inline-block; vertical-align: middle; margin-left: 16px; font-weight: 500; font-size: 13px; cursor: pointer; }
 }
 
 .progress.hide { background: rgba(0,0,0,0); }
