--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -5,7 +5,7 @@
 		.item {
 			.name { line-height: 1; }
 		}
-		.item.empty { font-size: 13px; line-height: 18px; }
+		.item.empty { font-size: 13px; line-height: 18px; padding-top: 8px; }
 		
 		.item.yellow.active { background: #fef3c5 !important; }
 		.item.green.active { background: #d6f5f3 !important; }
