--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -38,6 +38,11 @@
 	.menu.vertical { width: 208px; padding: 8px 0px; }
 	.menu.vertical {
 		.content { overflow-y: auto; max-height: 450px; }
+		
+		.filter { border-bottom: 1px solid #eae9e0; padding: 4px 16px 12px 16px; }
+		.filter {
+			.input { padding: 0px; height: 24px; }
+		}
 	
 		.title { 
 			font-size: 13px; line-height: 18px; margin: 0px; padding: 7px 16px; font-weight: 400; color: $colorDarkGrey;
