--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -5,7 +5,10 @@
 	.block.blockText {
 		.wrap { flex: auto; position: relative; padding: 0px; width: 100%; }
 		.value { -webkit-user-modify: read-write-plaintext-only; width: 100%; overflow: hidden; }
-		.placeHolder { color: $colorDarkGrey; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; overflow: hidden; width: 100%; height: 100%; }
+		.placeHolder { 
+			color: $colorDarkGrey; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; overflow: hidden; 
+			width: 100%; height: 100%; cursor: text; 
+		}
 		
 		a { cursor: pointer; white-space: nowrap; display: inline-flex; }
 		kbd { display: inline; font-family: 'Mono'; line-height: 1.71; background: rgba(247,245,240,0.5); padding: 0px 4px; border-radius: 2px; }
