--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -28,7 +28,7 @@
 		
 		.selectionOver { 
 			position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: Highlight; opacity: 0.5; border-radius: 4px;
-			display: none; 
+			display: none; pointer-events: none;
 		}
 	}
 	
