--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -30,6 +30,12 @@
 			position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: Highlight; opacity: 0.5; border-radius: 4px;
 			display: none; pointer-events: none;
 		}
+		
+		.emptyToggle { 
+			display: none; margin-left: 28px; color: $colorDarkGrey; position: relative; z-index: 2; cursor: pointer;
+			transition: $transitionFast; 
+		}
+		.emptyToggle:hover { color: $colorBlack; }
 	}
 	
 	.block.align0 > .wrapContent { text-align: left; }
@@ -47,6 +53,7 @@
 	
 	.block > .wrapContent > .children.canToggle { display: none; }
 	.block.isToggled > .wrapContent > .children { display: block; }
+	.block.isToggled > .wrapContent > .emptyToggle { display: block; }
 	.block.isToggled > .wrapContent > .selectable > .dropTarget > .flex > .markers > .marker.toggle { transform: rotateZ(90deg); }
 	
 	.block > .wrapContent > .selectable.isDragging > .dropTarget { opacity: 0.3; }
