--- a/src/scss/block/media.scss
+++ b/src/scss/block/media.scss
@@ -10,6 +10,7 @@
 		
 		.wrap { max-width: 100%; position: relative; display: inline-block; overflow: hidden; }
 		.media { width: 100%; display: block; }
+		video { height: 100%; }
 		
 		.icon.resize {
 			width: 20px; height: 20px; position: absolute; right: 2px; bottom: 2px;
