--- a/src/scss/page/main/edit.scss
+++ b/src/scss/page/main/edit.scss
@@ -3,4 +3,5 @@
 .pageMainEdit {
 	.wrapper { width: 704px; margin: 0px auto; padding: 40px 0px 0px 0px; }
 	.blocks { margin-left: -48px; }
+	.wrapper > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
 }
