#159, #187 - all blocks can be focusable

--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -11,4 +11,6 @@ html.debug {
 	}
 	
 	.blockLast { background: rgba(0,0,255,0.1); }
+	
+	.focusable.isFocused { border: 1px solid rgba(255,127,127,0.3); }
 } 
