--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -1,13 +1,8 @@
 @import "~scss/_vars";
 
-@keyframes subnavHoverHelp {
-	0% { height: 200%; }
-	99% { height: 200%; }
-	100% { height: 0%; }
-}
-
 .menus {
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 102; background: rgba(0,0,0,0); }
+	#menu-polygon { z-index: 1000; background: pink; opacity: 0.3; position: absolute; }
 	
 	.menu { 
 		border-radius: 8px; color: $colorBlack; position: absolute; z-index: 103; text-align: left; padding: 8px 0px;
@@ -55,15 +50,6 @@
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
 		.item.active { background: #f3f2ec; }
-		
-		.item.withChildren:hover::before, .item.withChildren:hover::after {
-			content: ""; position: absolute; z-index: 1000; right: 0px; width: 100%; height: 200%; 
-			animation: subnavHoverHelp 0.75s; animation-iteration-count: 1; animation-fill-mode: forwards;
-			/*opacity: 0.3; background: pink;*/
-		}
-		
-		.item.withChildren:hover::before { bottom: -200%; clip-path: polygon(0% 0%, 100% 0%, 100% 100%); }		
-		.item.withChildren:hover::after { top: -200%; clip-path: polygon(0% 100%, 100% 0%, 100% 100%); }
 		
 		.icon { width: 24px; height: 24px; margin-right: 8px; }
 		.icon.dnd { width: 7px; height: 12px; background-image: url('~img/icon/dnd.svg'); margin-right: 10px; }
