--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -31,6 +31,8 @@
 			display: none; pointer-events: none;
 		}
 		
+		.focusable { border-radius: inherit; }
+		
 		.emptyToggle { 
 			display: none; margin-left: 28px; color: $colorDarkGrey; position: relative; z-index: 2; cursor: pointer;
 			transition: $transitionFast; 
@@ -62,6 +64,9 @@
 	.block > .wrapContent > .selectable.isDragging > .dropTarget { opacity: 0.3; }
 	
 	.block > .wrapContent > .selectable.isSelected > .selectionOver { display: block; }
+	.block > .wrapContent > .selectable.isSelected { 
+		.placeHolder { display: none !important; } 
+	}
 	
 	.block.blockIcon > .wrapMenu { visibility: hidden; }
 }
