--- a/src/scss/block/layout.scss
+++ b/src/scss/block/layout.scss
@@ -2,12 +2,15 @@
 
 .blocks {
 	
+	.block.blockLayout > .wrapContent > .selectable > .dropTarget { display: none; }
+	
 	/* Row */
 	.block.blockLayout.c0 { padding: 15px 0px; }
 	.block.blockLayout.c0 > .wrapMenu { display: none; }
 	.block.blockLayout.c0 > .wrapContent { width: 100%; overflow: visible; }
 	.block.blockLayout.c0 > .wrapContent > .children { display: flex; }
-	.block.blockLayout.c0 > .wrapContent > .dropTarget { width: calc(100% - 48px); height: 15px; position: absolute; left: 48px; border-radius: 0px !important; }
+	
+	.block.blockLayout.c0 > .wrapContent > .dropTarget { padding: 0px; width: calc(100% - 48px); height: 15px; position: absolute; left: 48px; border-radius: 0px !important; }
 	.block.blockLayout.c0 > .wrapContent > .dropTarget.targetTop { top: -15px; }
 	.block.blockLayout.c0 > .wrapContent > .dropTarget.targetBot { bottom: -15px; }
 	
@@ -15,13 +18,12 @@
 	.block.blockLayout.c1 { padding: 0px; }
 	.block.blockLayout.c1 > .wrapMenu { display: none; }
 	.block.blockLayout.c1 > .wrapContent { width: 100%; }
-	.block.blockLayout.c1 > .wrapContent > .dropTarget { display: none; }
 	
-	.block.blockLayout.c1 > .wrapContent > .children > .block.first { padding-top: 0px; }
+	.block.blockLayout.c1 > .wrapContent > .children > .block.first > .wrapContent > .selectable > .dropTarget { padding-top: 0px; }
 	.block.blockLayout.c1 > .wrapContent > .children > .block.first {
 		.inputWithFile { margin-top: 0px; }
 	}
-	.block.blockLayout.c1 > .wrapContent > .children > .block.last { padding-bottom: 0px; }
+	.block.blockLayout.c1 > .wrapContent > .children > .block.last > .wrapContent > .selectable > .dropTarget { padding-bottom: 0px; }
 	.block.blockLayout.c1 > .wrapContent > .children > .block.last {
 		.inputWithFile { margin-bottom: 0px; }
 	}	
