--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -29,7 +29,7 @@
 		
 		.selectionOver { 
 			position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: Highlight; opacity: 0.5; border-radius: 4px;
-			display: none; pointer-events: none;
+			display: none; pointer-events: none; z-index: 10;
 		}
 		
 		.focusable { border-radius: inherit; }
