smile menu and tree popup filtering

--- a/src/scss/popup/tree.scss
+++ b/src/scss/popup/tree.scss
@@ -10,6 +10,8 @@
 			.input { padding: 0px; }
 		}
 		
+		.empty { text-align: center; }
+		
 		.items { padding: 16px; overflow-x: hidden; overflow-y: auto; }
 		.items {
 			.item { 
