--- a/src/scss/block/title.scss
+++ b/src/scss/block/title.scss
@@ -3,7 +3,7 @@
 .blocks {
 	.block.blockTitle { padding: 12px 0px 24px 0px; font-size: 36px; line-height: 40px; letter-spacing: -0.72px; font-weight: 600; }
 	.block.blockTitle {
-		.input { padding: 0px; font-size: inherit; line-height: inherit; letter-spacing: inherit; font-weight: inherit; }
+		.input { padding: 0px; font-size: inherit; line-height: inherit; letter-spacing: inherit; font-weight: inherit; height: auto; }
 	}
 	.block.blockTitle > .wrapContent > .selectable > .dropTarget { padding-top: 3px; padding-bottom: 2px; }
 	.block.blockTitle > .wrapMenu { visibility: hidden; }
